2013-10-23  Edward Smith-Rowland  <3dw4rd@verizon.net>

	Implement C++14 [[deprecated]] modulo [[gnu::deprecated]] bugs.
	* g++.dg/cpp1y/attr-deprecated.C: New.
	* g++.dg/cpp1y/attr-deprecated-neg.C: New.

2013-10-23  Tobias Burnus  <burnus@net-b.de>

	PR fortran/58793
	* gfortran.dg/assumed_type_8.f90: New.

2013-10-22  Uros Bizjak  <ubizjak@gmail.com>

	PR target/58779
	* gcc.target/i386/pr30315.c: Remove MINUSCC, DECCC, MINUSCCONLY
	and MINUSCCZEXT defines. Update scan-assembler dg directive.
	* gcc.dg/torture/pr58779.c: New test.

2013-10-22  Steve Ellcey  <sellcey@mips.com>

	* gcc.target/mips/nor.c: New.

2013-10-22  Bill Schmidt  <wschmidt@vnet.ibm.com>

	* gcc.target/powerpc/altivec-perm-1.c: Move the two vector pack
	tests into...
	* gcc.target/powerpc/altivec-perm-3.c: ...this new test, which is
	restricted to big-endian targets.

2013-10-22  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran 57893
	* gfortran.dg/unlimited_polymorphic_13.f90 : New test.

2013-10-21  Tobias Burnus  <burnus@net-b.de>

	PR fortran/58803
	* gfortran.dg/proc_ptr_comp_38.f90: New.

2013-10-21  Marek Polacek  <polacek@redhat.com>

	PR middle-end/58809
	* gcc.dg/gomp/pr58809.c: New test.

2013-10-21  Vidya Praveen  <vidyapraveen@arm.com>

	* gcc.dg/20050922-1.c: Remove stdlib.h and declare abort().
	* gcc.dg/20050922-1.c: Remove stdlib.h and declare abort() and exit().

2013-10-21  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/58794
	* c-c++-common/torture/pr58794-1.c: New testcase.
	* c-c++-common/torture/pr58794-2.c: Likewise.

2013-10-21  Richard Biener  <rguenther@suse.de>

	PR middle-end/58742
	* c-c++-common/fold-divmul-1.c: New testcase.

2013-10-21  Michael Zolotukhin  <michael.v.zolotukhin@gmail.com>

	* gcc.target/i386/memset-vector_loop-1.c: New test.
	* gcc.target/i386/memset-vector_loop-2.c: New test.

2013-10-21  Diego Novillo  <dnovillo@google.com>

	* g++.dg/plugin/selfassign.c: Include tree.h.
	* gcc.dg/plugin/finish_unit_plugin.c: Likewise.